--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="shortcut icon" href="img/favicon.png">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
     <!-- mi CSS -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -15,7 +16,7 @@
   </head>
   <body>
     <!-- inicia nav -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white"> 
+    <nav class="navbar navbar-expand-lg navbar-light bg-white" id="navBar"> 
         <div class="container-fluid flex-lg-column px-lg-0">
           <a class="navbar-brand" href="index.html">
             <img src="img/logo-foto.png" alt="logo de nutrimarket"> 
@@ -26,16 +27,16 @@
           <div class="collapse navbar-collapse bg-green nav__w" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav__ul">
               <li class="nav-item">
-                <a class="nav-link text-dark" aria-current="page" href="pgs/productos.html">Productos</a>
+                <a class="nav-link" aria-current="page" href="pgs/productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="pgs/go-natural.html">Go Natural</a>
+                <a class="nav-link" href="pgs/go-natural.html">Go Natural</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="pgs/nosotros.html">Nosotros</a>
+                <a class="nav-link" href="pgs/nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="pgs/contacto.html">Contacto</a>
+                <a class="nav-link" href="pgs/contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -75,7 +76,7 @@
     <!-- inicia go natural -->
     <section>
         <h2>GO NATURAL</h2>
-    <article class="card mb-3 border-0" style="max-width: 100%;">
+    <article class="card mb-3 border-0">
         <div class="row g-0">
           <div class="col-lg-4">
             <img src="img/trufas.jpg" class="img-fluid rounded-start p-3 mx-auto" alt="receta trufas de chocolate">
@@ -84,7 +85,7 @@
             <div class="card-body">
               <h3 class="card-title pt-2">Trufas de chocolate</h3>
               <p class="card-text pt-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis error sequi eius esse magnam, odit iste praesentium? Aspernatur ipsa possimus delectus iste reiciendis accusantium assumenda, magnam doloremque quod, nesciunt obcaecati.</p>
-              <a href="pgs/go-natural.html">Leer más >> </a>
+              <a class="btn bg-greenl3 text-white" href="pgs/go-natural.html">Leer más >> </a>
             </div>
           </div>
         </div>
@@ -92,7 +93,7 @@
     </section>
     <!-- enda go natural -->
     <!-- inicia contacto -->
-    <section class="bg-greenl1">
+    <section class="bg-greenl2">
         <h2>CONTACTATE CON NOSOTROS</h2>
         <div class="row w-100">
             <form action="envio.php" class="index__form-div col-lg-6">
@@ -109,7 +110,7 @@
     </section>
     <!-- ends contacto -->
     </main>
-    <footer class="pie">
+    <footer>
         <div class="d-flex align-items-center">
         Contacto
         <a href="pgs/contacto.html">
@@ -135,7 +136,7 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
 
   </body>
 </html>
