--- a/pgs/go-natural.html
+++ b/pgs/go-natural.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../img/favicon.png">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- mi CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
@@ -16,7 +16,7 @@
 <body>
     <div class="contenedor">
     <!-- inicia nav -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-white mainNav"> 
+     <nav class="navbar navbar-expand-lg navbar-light bg-white mainNav" id="navBar"> 
         <div class="container-fluid flex-lg-column px-lg-0">
           <a class="navbar-brand" href="../index.html">
             <img src="../img/logo-foto.png" alt="logo de nutrimarket"> 
@@ -27,16 +27,16 @@
           <div class="collapse navbar-collapse bg-green nav__w" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav__ul">
               <li class="nav-item">
-                <a class="nav-link text-dark" aria-current="page" href="productos.html">Productos</a>
+                <a class="nav-link" aria-current="page" href="productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="go-natural.html">Go Natural</a>
+                <a class="nav-link" href="go-natural.html">Go Natural</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="nosotros.html">Nosotros</a>
+                <a class="nav-link" href="nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -50,7 +50,7 @@
     <main class="section">
         <section class="container-fluid px-lg-0">
             <!-- inicia article I -->
-            <article class="card mb-3 border-0 w-100 bg-linear1" style="max-width: 100%;">
+            <article class="card mb-3 border-0 w-100 bg-linear1">
                 <div class="row g-0">
                   <div class="col-lg-4 d-flex justify-content-center">
                     <img src="../img/trufas.jpg" class="img-fluid rounded-start p-3 mx-auto" alt="receta trufas de chocolate">
@@ -66,7 +66,7 @@
             </article>
             <!-- ends article I -->
             <!-- inicia article II -->
-            <article class="card mb-3 border-0 w-100 bg-linear1" style="max-width: 100%;">
+            <article class="card mb-3 border-0 w-100 bg-linear1">
                 <div class="row g-0">
                   <div class="col-lg-4 d-flex justify-content-center">
                     <img src="../img/condimento.jpg" class="img-fluid rounded-start p-3 mx-auto" alt="receta condimento de curcuma">
@@ -82,7 +82,7 @@
             </article>
             <!-- ends article II -->
             <!-- inicia article III -->
-             <article class="card mb-3 border-0 w-100 bg-linear1" style="max-width: 100%;">
+             <article class="card mb-3 border-0 w-100 bg-linear1">
                 <div class="row g-0">
                   <div class="col-lg-4 d-flex justify-content-center">
                     <img src="../img/pudding.jpg" class="img-fluid rounded-start p-3 mx-auto" alt="receta Pudding de avena">
@@ -140,10 +140,7 @@
     </footer>
     </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <script src="../js/bootstrap.min.js"></script>
+    
 </body>
 </html>
