--- a/pgs/productos.html
+++ b/pgs/productos.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../img/favicon.png">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- mi CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
@@ -16,7 +16,7 @@
 </head>
 <body>
      <!-- inicia nav -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-white"> 
+     <nav class="navbar navbar-expand-lg navbar-light bg-white" id="navBar"> 
         <div class="container-fluid flex-lg-column px-lg-0">
           <a class="navbar-brand" href="../index.html">
             <img src="../img/logo-foto.png" alt="logo de nutrimarket"> 
@@ -27,16 +27,16 @@
           <div class="collapse navbar-collapse bg-green nav__w" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav__ul">
               <li class="nav-item">
-                <a class="nav-link text-dark" aria-current="page" href="productos.html">Productos</a>
+                <a class="nav-link" aria-current="page" href="productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="go-natural.html">Go Natural</a>
+                <a class="nav-link" href="go-natural.html">Go Natural</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="nosotros.html">Nosotros</a>
+                <a class="nav-link" href="nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -135,10 +135,7 @@
         </div>
     </footer>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 </html>
